<resources>
    <string name="app_name" translatable="false">Fourscreen</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="list">List</string>
    <string name="scaling">Scaling</string>
    <string name="parsing">Parsing</string>
    <string name="map">Map</string>
    <string name="about">About</string>
    <string name="information">Information</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="revert">Revert</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="permissions_request_title">Attention!</string>
    <string name="permissions_request_message">Need access to your location.</string>
    <string name="ok" translatable="false">ok</string>
    <string name="back_off">Map can\'t work without permission</string>
    <string name="contacts">Contacts</string>
    <string name="tel_about" translatable="false">Tel: +7-923-416-89-33</string>
    <string name="mail_about" translatable="false">e-mail: megapixxxell@gmail.com</string>
    <string name="russian_language" translatable="false">Русский</string>
    <string name="english_language" translatable="false">English</string>
    <string name="error">Error...</string>
    <string name="need_perm_toast">Need some permission for this</string>
</resources>
